tests/errors/ensuresTypeMismatch.milo
// @error: ensures clause must be bool

fn bar(x: i64): i64
  ensures result + 1
{
    return x
}

fn main(): i32 {
    print(bar(5))
    return 0
}
